--- a/style.css
+++ b/style.css
@@ -1,74 +1,1 @@
-body {
-  font-family: "Lato", sans-serif;
-  background-color:#f0f2f0;
-}
-
-.sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #2e58ff;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: white;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-
-.sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-}
-
-.openbtn:hover {
-  background-color: #444;
-}
-
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-#ht {
-  font-size:1.5em; font-weight:bolder;
-}
-#rb {
-  float:right;
-  background-color:#62e35f;
-}
-.app {
-  width:100px;height:100px;
-}
-table {width:100%;}
-td {text-align:center;vertical-align:middle;}
+[class~=sidebar] [class~=closebtn]{position:absolute;}.sidebar{height:100%;}.sidebar{width:0;}.sidebar{position:fixed;}#main{transition:margin-left .5s;}body{font-family:Lato,sans-serif;}.sidebar{z-index:1;}.sidebar,[class~=sidebar] [class~=closebtn]{top:0;}.sidebar{left:0;}.sidebar{background-color:#2e58ff;}.sidebar{overflow-x:hidden;}.sidebar{transition:.5s;}[class~=sidebar] a{padding-left:24pt;}.sidebar{padding-top:3.75pc;}[class~=sidebar] a{padding-bottom:8px;}[class~=openbtn]{font-size:1.25pc;}#main{padding-left:1pc;}[class~=openbtn]{cursor:pointer;}[class~=openbtn]{background-color:#111;}#main{padding-bottom:1pc;}[class~=sidebar] a,[class~=openbtn]{color:#fff;}[class~=openbtn]{padding-left:11.25pt;}[class~=openbtn]{padding-bottom:.104166667in;}[class~=openbtn]{padding-right:11.25pt;}[class~=openbtn]{padding-top:.104166667in;}[class~=openbtn]{border-left-width:medium;}[class~=openbtn]{border-bottom-width:medium;}[class~=sidebar] [class~=closebtn]{right:.260416667in;}[class~=openbtn]{border-right-width:medium;}[class~=openbtn]{border-top-width:medium;}[class~=openbtn]{border-left-style:none;}[class~=sidebar] a{padding-right:8px;}.sidebar a:hover{color:#f1f1f1;}[class~=sidebar] a{padding-top:.5pc;}[class~=openbtn]{border-bottom-style:none;}[class~=openbtn]{border-right-style:none;}[class~=sidebar] [class~=closebtn]{font-size:27pt;}[class~=openbtn]{border-top-style:none;}[class~=openbtn]{border-left-color:currentColor;}[class~=sidebar] a{text-decoration:none;}[class~=sidebar] a{font-size:1.5625pc;}[class~=sidebar] a{display:block;}[class~=openbtn]{border-bottom-color:currentColor;}[class~=openbtn]{border-right-color:currentColor;}[class~=openbtn]{border-top-color:currentColor;}[class~=sidebar] [class~=closebtn]{margin-left:50px;}[class~=openbtn]{border-image:none;}[class~=openbtn]:hover{background-color:#444;}#main{padding-right:1pc;}[class~=sidebar] a{transition:.3s;}#main{padding-top:1pc;}body{background-color:#f0f2f0;}@media screen and (max-height:450px){[class~=sidebar]{padding-top:15px;}[class~=sidebar] a{font-size:13.5pt;}}[class~=app]{width:1.041666667in;}#ht{font-size:1.5em;}[class~=app]{height:75pt;}table{width:100%;}#ht{font-weight:bolder;}#rb{float:right;}td{text-align:center;}#rb{background-color:#62e35f;}td{vertical-align:middle;}
